fix to lower-right notch on smaller screens

--- a/resource_style.css
+++ b/resource_style.css
@@ -22,7 +22,7 @@ Governing Documents page to the Articles of Association.
   margin-left: -30px;
   position: absolute;
   bottom: 0;
-  left: 100%;
+  left: 102%;
   border: 15px solid #f3f3f4;
   border-left: 15px solid transparent;
   border-top: 15px solid transparent;
